syntax = "proto3";
package puppet.service;

import "datapb/data.proto";

option go_package = "github.com/puppetlabs/go-servicesdk/servicepb";

message MetadataResponse {
  puppet.datapb.Data typeset = 1;
  puppet.datapb.Data definitions = 2;
}

message InvokeRequest {
  string identifier = 1;
  string method = 2;
  puppet.datapb.Data arguments = 3;
}

message EmptyRequest {
}

message StateRequest {
  string identifier = 1;
  puppet.datapb.Data input = 2;
}

service DefinitionService {
  rpc Identity (EmptyRequest) returns (puppet.datapb.Data) {};

  rpc Invoke (InvokeRequest) returns (puppet.datapb.Data) {};

  rpc Metadata (EmptyRequest) returns (MetadataResponse) {};

  rpc State (StateRequest) returns (puppet.datapb.Data) {};
}
